// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Card renders as interactive when onPress is provided 1`] = `
<View
  accessibilityLabel="Tap this card"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 20,
      },
      {
        "elevation": 3,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      },
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <Text>
    Interactive card
  </Text>
</View>
`;

exports[`Card renders compact padding 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 12,
      },
      {
        "elevation": 3,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      },
      undefined,
    ]
  }
>
  <Text>
    Dense card
  </Text>
</View>
`;

exports[`Card renders elevated variant 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 20,
      },
      {
        "elevation": 6,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 6,
      },
      undefined,
    ]
  }
>
  <Text>
    Featured
  </Text>
</View>
`;

exports[`Card renders flat elevation 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 20,
      },
      {},
      undefined,
    ]
  }
>
  <Text>
    Flat card
  </Text>
</View>
`;

exports[`Card renders standard elevation by default 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 20,
      },
      {
        "elevation": 3,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      },
      undefined,
    ]
  }
>
  <Text>
    Card content
  </Text>
</View>
`;

exports[`Card renders with border 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 16,
        "borderWidth": 1,
        "padding": 20,
      },
      {
        "elevation": 3,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      },
      undefined,
    ]
  }
>
  <Text>
    Bordered
  </Text>
</View>
`;

exports[`Card renders with no padding 1`] = `
<View
  className="overflow-hidden"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "padding": 0,
      },
      {
        "elevation": 3,
        "shadowColor": "#1C222C",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      },
      undefined,
    ]
  }
>
  <Text>
    Image card
  </Text>
</View>
`;
